# outcomes-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh-CN.md
.cargo/: audit.toml
docs/: api-reference.md  api-reference.zh-CN.md
examples/: unauthenticated_reads.rs
src/: api.rs  client.rs  endpoints.rs  error.rs  lib.rs  models.rs  signing.rs  ws.rs
src/api/: balance.rs  events.rs  orders.rs  positions.rs  prices.rs  trades.rs
src/models/: balance.rs  common.rs  event.rs  order.rs  position.rs  price.rs  trade.rs
src/signing/: action.rs  chain_type.rs  client_order_id.rs  ecdsa_sign.rs  eip712.rs  hex.rs  msgpack.rs  signer.rs  tx_signature.rs  types.rs
src/ws/: endpoints.rs  models.rs  transport.rs  tungstenite.rs
tests/: public_api.rs
