[package]
name = "okx-outcomes-sdk"
description = "Rust SDK for the OKX Outcomes Developer API"
readme = "README.md"
keywords = ["okx", "outcomes", "outcome-market", "trading", "web3"]
categories = ["api-bindings", "asynchronous"]
version = "1.0.1"
edition = "2021"
license = "MIT"
authors = ["OKX Outcomes Contributors"]
rust-version = "1.91"
repository = "https://github.com/okx/outcomes-sdk"
homepage = "https://github.com/okx/outcomes-sdk"

[features]
signing = [
    "dep:k256",
    "dep:getrandom",
    "dep:rmp-serde",
    "dep:alloy-primitives",
    "dep:alloy-sol-types",
    "dep:alloy-signer",
    "dep:alloy-signer-local",
]
websocket = ["dep:tokio-tungstenite", "dep:futures-util", "dep:url"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = "2.0.17"
tokio = { version = "1.0", default-features = false, features = ["time", "rt", "rt-multi-thread", "sync", "macros"] }
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10.9"
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Optional — gated by `signing`
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"], optional = true }
getrandom = { version = "0.2", optional = true }
rmp-serde = { version = "1.3", optional = true }
alloy-primitives = { version = "1.6", optional = true }
alloy-sol-types = { version = "1.6", default-features = false, features = ["std"], optional = true }
alloy-signer = { version = "2", default-features = false, optional = true }
alloy-signer-local = { version = "2", default-features = false, optional = true }

# Optional — gated by `websocket`
tokio-tungstenite = { version = "0.21", features = ["native-tls"], optional = true }
futures-util = { version = "0.3.31", optional = true }
url = { version = "2.5.7", optional = true }

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
